tests/rosetta/out/Fortran/cholesky-decomposition.error
gfortran: exit status 1
/tmp/cholesky-decomposition.f90:76:33:

   76 |   recursive subroutine printMat(m)
      |                                 1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘m’ at (1)
/tmp/cholesky-decomposition.f90:31:39:

   31 |   recursive integer function cholesky(a) result(res)
      |                                       1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/cholesky-decomposition.f90:97:18:

   97 |     call printMat(a)
      |                  1
Error: Expected a procedure for argument ‘m’ at (1)
/tmp/cholesky-decomposition.f90:84:16:

   84 |         line = (line + s2)
      |                1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/cholesky-decomposition.f90:85:23:

   85 |         if (((j < size(m(((i)+1)))) - 1)) then
      |                       1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cholesky-decomposition.f90:82:26:

   82 |       do while ((j < size(m(((i)+1)))))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cholesky-decomposition.f90:79:24:

   79 |     do while ((i < size(m)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cholesky-decomposition.f90:98:17:

   98 |     l = cholesky(a)
      |                 1
Error: Expected a procedure for argument ‘a’ at (1)
/tmp/cholesky-decomposition.f90:33:13:

   33 |     n = size(a)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cholesky-decomposition.f90:50:6:

   50 |       app1(size(l)+1) = row
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/cholesky-decomposition.f90:61:47:

   61 |           sum = ((sum - l(((i)+1),((k)+1))) * l(((j)+1),((k)+1)))
      |                                               1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/cholesky-decomposition.f90:61:25:

   61 |           sum = ((sum - l(((i)+1),((k)+1))) * l(((j)+1),((k)+1)))
      |                         1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/cholesky-decomposition.f90:65:11:

   65 |           l(((i)+1),((j)+1)) = sqrtApprox(sum)
      |           1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/cholesky-decomposition.f90:65:31:

   65 |           l(((i)+1),((j)+1)) = sqrtApprox(sum)
      |                               1
Error: Type mismatch in argument ‘x’ at (1); passed INTEGER(4) to REAL(4)
/tmp/cholesky-decomposition.f90:67:11:

   67 |           l(((i)+1),((j)+1)) = (sum / l(((j)+1),((j)+1)))
      |           1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/cholesky-decomposition.f90:67:39:

   67 |           l(((i)+1),((j)+1)) = (sum / l(((j)+1),((j)+1)))
      |                                       1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/cholesky-decomposition.f90:73:4:

   73 |     res = l
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/cholesky-decomposition.f90:100:18:

  100 |     call printMat(l)
      |                  1
Error: Rank mismatch in argument ‘m’ at (1) (scalar and rank-1)
/tmp/cholesky-decomposition.f90:16:71:

   16 |   call demo((/(/25.0,15.0,-5.0/),(/15.0,18.0,0.0/),(/-5.0,0.0,11.0/)/))
      |                                                                       1
Error: Type mismatch in argument ‘a’ at (1); passed REAL(4) to INTEGER(4)
/tmp/cholesky-decomposition.f90:17:116:

   17 |   call demo((/(/18.0,22.0,54.0,42.0/),(/22.0,70.0,86.0,62.0/),(/54.0,86.0,174.0,134.0/),(/42.0,62.0,134.0,106.0/)/))
      |                                                                                                                    1
Error: Type mismatch in argument ‘a’ at (1); passed REAL(4) to INTEGER(4)
